--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.one{
+  margin: 5px;
+}
+.test{
+  float: right;
+}
